hard-gists/3151375/run.log
=== Docker Run Log for 3151375 ===
Started at: Mi 29. Okt 13:42:42 CET 2025

[2025-10-29 13:42:43] START: Running container for 3151375
[2025-10-29 13:42:43] SUCCESS: Container 66f32697e1fca3e918dadbcedffa9515749f5567cce8294eb92c26e721dcd4f6 started for 3151375
=== Container logs for 3151375 ===
  File "/snippet.py", line 78
    print "trim_pot:", trim_pot
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3151375 ===
[2025-10-29 13:42:45] INFO: Container 66f32697e1fca3e918dadbcedffa9515749f5567cce8294eb92c26e721dcd4f6 has stopped
